--- a/musician.html
+++ b/musician.html
@@ -50,5 +50,33 @@
         result.innerHTML="Correct guess: "+correct+"Wrong guess: "+wrong
     }
     </script>
+
+<div style="text-align: center;padding: 75px 75px"><img src="Alderflies.jpg" id="insect" height="100px" width="100px" onclick="swapImage()"></div>
+
+    <script>
+        var useImage = 1;
+        function swapImage()
+        {
+            switch(useImage){
+                case 1:
+                document.getElementById("insect").src="Alderflies.jpg"
+                useImage=2;
+                break;
+                case 2:
+                document.getElementById("insect").src="Red_Bug.jpg"
+                useImage=3;
+               break;
+                case 3:
+                document.getElementById("insect").src="Nit.jpg"
+                useImage=4;
+                break;
+                
+            }
+        }
+
+
+</script>
+
+
     </body>
     </html>  
