--- a/discount.html
+++ b/discount.html
@@ -13,7 +13,7 @@
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
     </head>
 <body>
-
+    <div class="container p-3 my-3 bg-info text-dark">
 <h1> Prudhvi Computes Discounts</h1>
 
 <div class="container">
