--- a/vacation.html
+++ b/vacation.html
@@ -14,7 +14,9 @@
     </head>
  
 <body>
-<h1>Prudhvi Selects a Vacation</h1>
+    
+    <div class="container p-3 my-3 bg-secondary text-light">
+<h1 style="text-align:center">Prudhvi Selects a Vacation</h1>
 
 <div class="container">
     <form>
