--- a/musician.html
+++ b/musician.html
@@ -9,15 +9,18 @@
     <h1>Musicians guess by Prudhvi</h1>
     
 
-      
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" 
-    crossorigin="anonymous">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
- 
+    <div class="container p-3 my-3 bg-success text-white">
 <h2>Getting input</h2>
 
 
@@ -27,7 +30,7 @@
     <label for="GuessMusician">Guess the musician </label>
     <input type ="text" id="GuessMusician" name="GuessMusician" autofocus> <br>
 
-    <input type="button" onclick="checkGuess()" value="Check the guess ">
+    <input type="button" onclick="checkGuess();endGame()" value="Check the guess ">
 </form>
 <p id="result">This text will be replaced </p>
 
@@ -74,6 +77,20 @@
             }
         }
 
+
+        function endGame(){
+
+while (wrong > 3) {
+    if(wrong>=3){
+        wrong-=5
+        alert("Sorry, game over.")
+    }
+    else{
+        document.getElementById("result").innerHTML = "correct : " + correct + " , " + " wrong : " + wrong
+    }    
+}
+
+}
 
 </script>
 
